JEKT-176 (Configured new Pipeline) ❇️ New     - Pipeline        - SAP_MD_MATL_INV_BBA_BBL_BBN_GEU_MRS_MBP
🔁 Modified
    - Pipeline
       - JDE_MD_MATL_INV_BW2_DEU_DJD_GMD_JEM_JES_JET_JSW_MTR_SDJ
       - SAP_MD_MATL_INV_HM2
       - SAP_MD_MATL_INV_P01
    - Dataset
       - MD_MATL_INV

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -55,7 +55,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-03-20 08:44:36'
-    modifiedAt: '2023-03-31 16:27:53'
+    modifiedAt: '2023-04-10 13:57:57'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F4101
@@ -388,13 +388,13 @@ pipelines:
     dependencies: {}
   pipelines/SAP_01_MD_MATL_INV:
     name: SAP_MD_MATL_INV_HM2
-    description: ''
+    description: SAP System for MD_MATL_INV HM2 3 Tables
     author: ypatel8@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-03-22 13:21:05'
-    modifiedAt: '2023-04-07 17:12:19'
+    modifiedAt: '2023-04-10 16:03:37'
     datasets:
       inputs:
       - datasets/DS_SAP_01_MARA
@@ -485,13 +485,13 @@ pipelines:
     dependencies: {}
   pipelines/SAP_MD_MATL_INV_P01:
     name: SAP_MD_MATL_INV_P01
-    description: ''
+    description: SAP Systems for MD_MATL_INV 6 Tables
     author: ypatel8@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-05 13:20:43'
-    modifiedAt: '2023-04-07 22:44:22'
+    modifiedAt: '2023-04-10 16:02:51'
     datasets:
       inputs:
       - datasets/DS_SAP_01_MARD
@@ -1237,6 +1237,27 @@ pipelines:
       - datasets/STRCT_MES_MD_PROD_BASE
       - datasets/STRCT_MES_MD_PROD_RVSN
       - datasets/STRCT_MES_MD_PROD_RVSN_BASE
+    subgraphs: []
+    dependencies: {}
+  pipelines/SAP_MD_MATL_INV_BBA_BBL_BBN_GEU_MRS_MBP:
+    name: SAP_MD_MATL_INV_BBA_BBL_BBN_GEU_MRS_MBP
+    description: 'SAP Systems for MD_MATL_INV 5 Tables '
+    author: ypatel8@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-10 16:01:09'
+    modifiedAt: '2023-04-10 18:32:38'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_01_MARD
+      - datasets/DS_SAP_02_MCHB
+      - datasets/DS_SAP_03_MSKU
+      - datasets/DS_SAP_05_MSLB
+      - datasets/DS_SAP_06_MSSL
+      - datasets/DS_SAP_07_MARA
+      outputs:
+      - datasets/MD_MATL_INV
     subgraphs: []
     dependencies: {}
 datasets:
@@ -2445,7 +2466,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-04-06 20:06:39'
+    modifiedAt: '2023-04-10 16:18:23'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
