JEKT-136 ❇️ New     - Dataset        - DS_JDE_01_f42119
🔁 Modified
    - Pipeline
       - JDE_MD_SLS_ORDR_LINE_

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1307,10 +1307,11 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-10 16:51:20'
-    modifiedAt: '2023-04-10 17:16:48'
+    modifiedAt: '2023-04-10 18:33:38'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F4211
+      - datasets/DS_JDE_01_f42119
       outputs: []
     subgraphs: []
     dependencies: {}
@@ -7300,6 +7301,21 @@ datasets:
         author: fsano1@its.jnj.com
         createdAt: '2023-04-10 17:07:55'
         modifiedAt: '2023-04-10 17:07:55'
+  datasets/DS_JDE_01_f42119:
+    name: DS_JDE_01_f42119
+    description: ''
+    author: fsano1@its.jnj.com
+    createdAt: '2023-04-10 17:31:01'
+    modifiedAt: '2023-04-10 17:31:01'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: fsano1@its.jnj.com
+        createdAt: '2023-04-10 17:31:01'
+        modifiedAt: '2023-04-10 17:31:01'
 templates: {}
 jobs:
   jobs/JOB_MD_SER_NUM_STOCK_SGMNT:
