JEKT-268 - Renamed Jobs for each Source System and dropped the prefix DEV as this wil be added during the Workflow Job creations 🔁 Modified     - Job        - BWI_PIPELINE_JOB        - JNS_PIPELINE_JOB        - P01_PIPELINE_JOB        - BBN_PIPELINE_JOB        - BW2_PIPELINE_JOB        - MBP_PIPELINE_JOB        - LNX_PIPELINE_JOB        - JSW_PIPELINE_JOB        - DEU_PIPELINE_JOB        - JEM_PIPELINE_JOB        - SVS_PIPELINE_JOB        - JET_PIPELINE_JOB        - ANS_PIPELINE_JOB        - VST_PIPELINE_JOB        - BBL_PIPELINE_JOB        - MTR_PIPELINE_JOB        - BBM_PIPELINE_JOB        - ATL_PIPELINE_JOB        - SJD_PIPELINE_JOB        - MRS_PIPELINE_JOB        - FSN_PIPELINE_JOB        - BBA_PIPELINE_JOB        - MTK_PIPELINE_JOB        - JES_PIPELINE_JOB        - GMD_PIPELINE_JOB        - TAI_PIPELINE_JOB        - DJD_PIPELINE_JOB        - HCS_PIPELINE_JOB        - GEU_PIPELINE_JOB
❌ Deleted
    - Pipeline
       - SK_SAP_01_MD_SER_NUM_STOCK_SGMNT

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -47,22 +47,6 @@ pipelines:
       - datasets/MD_SER_NUM_STOCK_SGMNT
     subgraphs: []
     dependencies: {}
-  pipelines/SK_SAP_01_MD_SER_NUM_STOCK_SGMNT:
-    name: SK_SAP_01_MD_SER_NUM_STOCK_SGMNT
-    description: ''
-    author: skostadi@its.jnj.com
-    mode: batch
-    artefactID: ''
-    language: python
-    createdAt: '2023-03-22 12:44:39'
-    modifiedAt: '2023-03-22 13:48:52'
-    datasets:
-      inputs:
-      - datasets/DS_SAP_EQBS_01
-      outputs:
-      - datasets/MD_SER_NUM_STOCK_SGMNT
-    subgraphs: []
-    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
@@ -2791,7 +2775,7 @@ jobs:
     modifiedAt: '2023-03-28 16:21:46'
     author: smille29@its.jnj.com
   jobs/DEV_ATL_PIPELINE_JOB:
-    name: DEV_ATL_PIPELINE_JOB
+    name: ATL_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -2813,10 +2797,10 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 13:44:33'
-    modifiedAt: '2023-03-29 20:09:47'
+    modifiedAt: '2023-04-10 18:44:17'
     author: smille29@its.jnj.com
   jobs/DEV_BBA_PIPELINE_JOB:
-    name: DEV_BBA_PIPELINE_JOB
+    name: BBA_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -2838,10 +2822,10 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:19:30'
-    modifiedAt: '2023-03-29 20:10:01'
+    modifiedAt: '2023-04-10 18:44:05'
     author: smille29@its.jnj.com
   jobs/DEV_BBL_PIPELINE_JOB:
-    name: DEV_BBL_PIPELINE_JOB
+    name: BBL_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -2863,10 +2847,10 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:21:30'
-    modifiedAt: '2023-03-29 20:10:14'
+    modifiedAt: '2023-04-10 18:43:50'
     author: smille29@its.jnj.com
   jobs/DEV_BBN_PIPELINE_JOB:
-    name: DEV_BBN_PIPELINE_JOB
+    name: BBN_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -2888,10 +2872,10 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:22:48'
-    modifiedAt: '2023-03-29 20:10:24'
+    modifiedAt: '2023-04-10 18:30:33'
     author: smille29@its.jnj.com
   jobs/DEV_MRS_PIPELINE_JOB:
-    name: DEV_MRS_PIPELINE_JOB
+    name: MRS_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -2913,10 +2897,10 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:23:52'
-    modifiedAt: '2023-03-29 20:10:35'
+    modifiedAt: '2023-04-10 18:43:37'
     author: smille29@its.jnj.com
   jobs/DEV_HCS_PIPELINE_JOB:
-    name: DEV_HCS_PIPELINE_JOB
+    name: HCS_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -2938,10 +2922,10 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:25:32'
-    modifiedAt: '2023-03-29 20:10:45'
+    modifiedAt: '2023-04-10 18:43:21'
     author: smille29@its.jnj.com
   jobs/DEV_MBP_PIPELINE_JOB:
-    name: DEV_MBP_PIPELINE_JOB
+    name: MBP_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -2963,10 +2947,10 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:26:51'
-    modifiedAt: '2023-03-29 20:10:56'
+    modifiedAt: '2023-04-10 18:43:02'
     author: smille29@its.jnj.com
   jobs/DEV_P01_PIPELINE_JOB:
-    name: DEV_P01_PIPELINE_JOB
+    name: P01_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -2988,10 +2972,10 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:27:50'
-    modifiedAt: '2023-03-29 20:11:07'
+    modifiedAt: '2023-04-10 18:37:01'
     author: smille29@its.jnj.com
   jobs/DEV_SVS_PIPELINE_JOB:
-    name: DEV_SVS_PIPELINE_JOB
+    name: SVS_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -3013,10 +2997,10 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:30:48'
-    modifiedAt: '2023-03-29 20:11:17'
+    modifiedAt: '2023-04-10 18:36:40'
     author: smille29@its.jnj.com
   jobs/DEV_ANS_PIPELINE_JOB:
-    name: DEV_ANS_PIPELINE_JOB
+    name: ANS_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -3037,10 +3021,10 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:40:15'
-    modifiedAt: '2023-03-29 20:08:15'
+    modifiedAt: '2023-04-10 18:45:58'
     author: smille29@its.jnj.com
   jobs/DEV_BBM_PIPELINE_JOB:
-    name: DEV_BBM_PIPELINE_JOB
+    name: BBM_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -3061,10 +3045,10 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:41:31'
-    modifiedAt: '2023-03-29 20:08:01'
+    modifiedAt: '2023-04-10 18:46:10'
     author: smille29@its.jnj.com
   jobs/DEV_BWI_PIPELINE_JOB:
-    name: DEV_BWI_PIPELINE_JOB
+    name: BWI_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -3085,10 +3069,10 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:42:32'
-    modifiedAt: '2023-03-29 20:11:29'
+    modifiedAt: '2023-04-10 18:36:03'
     author: smille29@its.jnj.com
   jobs/DEV_FSN_PIPELINE_JOB:
-    name: DEV_FSN_PIPELINE_JOB
+    name: FSN_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -3109,10 +3093,10 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:44:07'
-    modifiedAt: '2023-03-29 20:11:40'
+    modifiedAt: '2023-04-10 18:35:17'
     author: smille29@its.jnj.com
   jobs/DEV_MTK_PIPELINE_JOB:
-    name: DEV_MTK_PIPELINE_JOB
+    name: MTK_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -3133,10 +3117,10 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 15:06:37'
-    modifiedAt: '2023-03-29 20:07:36'
+    modifiedAt: '2023-04-10 18:46:44'
     author: smille29@its.jnj.com
   jobs/DEV_LNX_PIPELINE_JOB:
-    name: DEV_LNX_PIPELINE_JOB
+    name: LNX_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -3157,10 +3141,10 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:15:06'
-    modifiedAt: '2023-03-29 20:07:48'
+    modifiedAt: '2023-04-10 18:46:28'
     author: smille29@its.jnj.com
   jobs/DEV_TAI_PIPELINE_JOB:
-    name: DEV_TAI_PIPELINE_JOB
+    name: TAI_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -3181,10 +3165,10 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:16:30'
-    modifiedAt: '2023-03-29 20:11:53'
+    modifiedAt: '2023-04-10 18:35:04'
     author: smille29@its.jnj.com
   jobs/DEV_VST_PIPELINE_JOB:
-    name: DEV_VST_PIPELINE_JOB
+    name: VST_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -3205,10 +3189,10 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:17:29'
-    modifiedAt: '2023-03-29 20:07:21'
+    modifiedAt: '2023-04-10 18:47:01'
     author: smille29@its.jnj.com
   jobs/DEV_GEU_PIPELINE_JOB:
-    name: DEV_GEU_PIPELINE_JOB
+    name: GEU_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -3229,10 +3213,10 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:18:46'
-    modifiedAt: '2023-03-29 20:12:03'
+    modifiedAt: '2023-04-10 18:34:50'
     author: smille29@its.jnj.com
   jobs/DEV_BW2_PIPELINE_JOB:
-    name: DEV_BW2_PIPELINE_JOB
+    name: BW2_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -3253,10 +3237,10 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:19:52'
-    modifiedAt: '2023-03-29 20:12:13'
+    modifiedAt: '2023-04-10 18:34:37'
     author: smille29@its.jnj.com
   jobs/DEV_DEU_PIPELINE_JOB:
-    name: DEV_DEU_PIPELINE_JOB
+    name: DEU_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -3277,10 +3261,10 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:22:23'
-    modifiedAt: '2023-03-29 20:12:23'
+    modifiedAt: '2023-04-10 18:34:24'
     author: smille29@its.jnj.com
   jobs/DEV_DJD_PIPELINE_JOB:
-    name: DEV_DJD_PIPELINE_JOB
+    name: DJD_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -3301,10 +3285,10 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:22:54'
-    modifiedAt: '2023-03-29 20:12:42'
+    modifiedAt: '2023-04-10 18:33:54'
     author: smille29@its.jnj.com
   jobs/DEV_GMD_PIPELINE_JOB:
-    name: DEV_GMD_PIPELINE_JOB
+    name: GMD_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -3325,10 +3309,10 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:23:35'
-    modifiedAt: '2023-03-29 20:12:32'
+    modifiedAt: '2023-04-10 18:34:06'
     author: smille29@its.jnj.com
   jobs/DEV_JEM_PIPELINE_JOB:
-    name: DEV_JEM_PIPELINE_JOB
+    name: JEM_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -3349,10 +3333,10 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:25:27'
-    modifiedAt: '2023-03-29 20:12:52'
+    modifiedAt: '2023-04-10 18:31:11'
     author: smille29@its.jnj.com
   jobs/DEV_JES_PIPELINE_JOB:
-    name: DEV_JES_PIPELINE_JOB
+    name: JES_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -3373,10 +3357,10 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:26:11'
-    modifiedAt: '2023-03-29 20:13:02'
+    modifiedAt: '2023-04-10 18:30:46'
     author: smille29@its.jnj.com
   jobs/DEV_JET_PIPELINE_JOB:
-    name: DEV_JET_PIPELINE_JOB
+    name: JET_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -3397,10 +3381,10 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:26:51'
-    modifiedAt: '2023-03-29 20:09:35'
+    modifiedAt: '2023-04-10 18:44:34'
     author: smille29@its.jnj.com
   jobs/DEV_JNS_PIPELINE_JOB:
-    name: DEV_JNS_PIPELINE_JOB
+    name: JNS_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -3421,10 +3405,10 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:27:27'
-    modifiedAt: '2023-03-29 20:09:15'
+    modifiedAt: '2023-04-10 18:44:49'
     author: smille29@its.jnj.com
   jobs/DEV_JSW_PIPELINE_JOB:
-    name: DEV_JSW_PIPELINE_JOB
+    name: JSW_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -3445,10 +3429,10 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:28:09'
-    modifiedAt: '2023-03-29 20:09:03'
+    modifiedAt: '2023-04-10 18:45:06'
     author: smille29@its.jnj.com
   jobs/DEV_MTR_PIPELINE_JOB:
-    name: DEV_MTR_PIPELINE_JOB
+    name: MTR_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -3469,10 +3453,10 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:28:47'
-    modifiedAt: '2023-03-29 20:08:44'
+    modifiedAt: '2023-04-10 18:45:27'
     author: smille29@its.jnj.com
   jobs/DEV_SJD_PIPELINE_JOB:
-    name: DEV_SJD_PIPELINE_JOB
+    name: SJD_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -3493,7 +3477,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:29:19'
-    modifiedAt: '2023-03-29 20:08:28'
+    modifiedAt: '2023-04-10 18:45:44'
     author: smille29@its.jnj.com
 functions:
   author: null
