Renaming jobs not to have DEV_ in the name

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -2749,7 +2749,7 @@ jobs:
     modifiedAt: '2023-04-04 04:59:12'
     author: smille29@its.jnj.com
   jobs/DEV_ATL_PIPELINE_JOB:
-    name: DEV_ATL_PIPELINE_JOB
+    name: ATL_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -2774,7 +2774,7 @@ jobs:
     modifiedAt: '2023-04-04 04:57:07'
     author: smille29@its.jnj.com
   jobs/DEV_BBA_PIPELINE_JOB:
-    name: DEV_BBA_PIPELINE_JOB
+    name: BBA_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -2799,7 +2799,7 @@ jobs:
     modifiedAt: '2023-04-04 04:57:12'
     author: smille29@its.jnj.com
   jobs/DEV_BBL_PIPELINE_JOB:
-    name: DEV_BBL_PIPELINE_JOB
+    name: BBL_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -2824,7 +2824,7 @@ jobs:
     modifiedAt: '2023-04-04 04:57:16'
     author: smille29@its.jnj.com
   jobs/DEV_BBN_PIPELINE_JOB:
-    name: DEV_BBN_PIPELINE_JOB
+    name: BBN_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -2849,7 +2849,7 @@ jobs:
     modifiedAt: '2023-04-04 04:57:24'
     author: smille29@its.jnj.com
   jobs/DEV_MRS_PIPELINE_JOB:
-    name: DEV_MRS_PIPELINE_JOB
+    name: MRS_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -2874,7 +2874,7 @@ jobs:
     modifiedAt: '2023-04-04 04:58:30'
     author: smille29@its.jnj.com
   jobs/DEV_HCS_PIPELINE_JOB:
-    name: DEV_HCS_PIPELINE_JOB
+    name: HCS_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -2899,7 +2899,7 @@ jobs:
     modifiedAt: '2023-04-04 04:58:02'
     author: smille29@its.jnj.com
   jobs/DEV_MBP_PIPELINE_JOB:
-    name: DEV_MBP_PIPELINE_JOB
+    name: MBP_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -2924,7 +2924,7 @@ jobs:
     modifiedAt: '2023-04-04 04:58:26'
     author: smille29@its.jnj.com
   jobs/DEV_P01_PIPELINE_JOB:
-    name: DEV_P01_PIPELINE_JOB
+    name: P01_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -2949,7 +2949,7 @@ jobs:
     modifiedAt: '2023-04-04 04:58:42'
     author: smille29@its.jnj.com
   jobs/DEV_SVS_PIPELINE_JOB:
-    name: DEV_SVS_PIPELINE_JOB
+    name: SVS_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -2974,7 +2974,7 @@ jobs:
     modifiedAt: '2023-04-04 04:58:54'
     author: smille29@its.jnj.com
   jobs/DEV_ANS_PIPELINE_JOB:
-    name: DEV_ANS_PIPELINE_JOB
+    name: ANS_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -2998,7 +2998,7 @@ jobs:
     modifiedAt: '2023-04-04 04:57:03'
     author: smille29@its.jnj.com
   jobs/DEV_BBM_PIPELINE_JOB:
-    name: DEV_BBM_PIPELINE_JOB
+    name: BBM_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -3022,7 +3022,7 @@ jobs:
     modifiedAt: '2023-04-04 04:57:22'
     author: smille29@its.jnj.com
   jobs/DEV_BWI_PIPELINE_JOB:
-    name: DEV_BWI_PIPELINE_JOB
+    name: BWI_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -3046,7 +3046,7 @@ jobs:
     modifiedAt: '2023-04-04 04:57:35'
     author: smille29@its.jnj.com
   jobs/DEV_FSN_PIPELINE_JOB:
-    name: DEV_FSN_PIPELINE_JOB
+    name: FSN_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -3070,7 +3070,7 @@ jobs:
     modifiedAt: '2023-04-04 04:57:50'
     author: smille29@its.jnj.com
   jobs/DEV_MTK_PIPELINE_JOB:
-    name: DEV_MTK_PIPELINE_JOB
+    name: MTK_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -3094,7 +3094,7 @@ jobs:
     modifiedAt: '2023-04-04 04:58:35'
     author: smille29@its.jnj.com
   jobs/DEV_LNX_PIPELINE_JOB:
-    name: DEV_LNX_PIPELINE_JOB
+    name: LNX_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -3118,7 +3118,7 @@ jobs:
     modifiedAt: '2023-04-04 18:31:14'
     author: smille29@its.jnj.com
   jobs/DEV_TAI_PIPELINE_JOB:
-    name: DEV_TAI_PIPELINE_JOB
+    name: TAI_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -3142,7 +3142,7 @@ jobs:
     modifiedAt: '2023-04-04 04:59:04'
     author: smille29@its.jnj.com
   jobs/DEV_VST_PIPELINE_JOB:
-    name: DEV_VST_PIPELINE_JOB
+    name: VST_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -3166,7 +3166,7 @@ jobs:
     modifiedAt: '2023-04-04 04:59:08'
     author: smille29@its.jnj.com
   jobs/DEV_GEU_PIPELINE_JOB:
-    name: DEV_GEU_PIPELINE_JOB
+    name: GEU_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -3190,7 +3190,7 @@ jobs:
     modifiedAt: '2023-04-04 04:57:54'
     author: smille29@its.jnj.com
   jobs/DEV_BW2_PIPELINE_JOB:
-    name: DEV_BW2_PIPELINE_JOB
+    name: BW2_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -3214,7 +3214,7 @@ jobs:
     modifiedAt: '2023-04-04 04:57:30'
     author: smille29@its.jnj.com
   jobs/DEV_DEU_PIPELINE_JOB:
-    name: DEV_DEU_PIPELINE_JOB
+    name: DEU_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -3238,7 +3238,7 @@ jobs:
     modifiedAt: '2023-04-04 04:57:39'
     author: smille29@its.jnj.com
   jobs/DEV_DJD_PIPELINE_JOB:
-    name: DEV_DJD_PIPELINE_JOB
+    name: DJD_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -3262,7 +3262,7 @@ jobs:
     modifiedAt: '2023-04-04 04:57:44'
     author: smille29@its.jnj.com
   jobs/DEV_GMD_PIPELINE_JOB:
-    name: DEV_GMD_PIPELINE_JOB
+    name: GMD_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -3286,7 +3286,7 @@ jobs:
     modifiedAt: '2023-04-04 04:57:59'
     author: smille29@its.jnj.com
   jobs/DEV_JEM_PIPELINE_JOB:
-    name: DEV_JEM_PIPELINE_JOB
+    name: JEM_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -3310,7 +3310,7 @@ jobs:
     modifiedAt: '2023-04-04 04:58:07'
     author: smille29@its.jnj.com
   jobs/DEV_JES_PIPELINE_JOB:
-    name: DEV_JES_PIPELINE_JOB
+    name: JES_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -3334,7 +3334,7 @@ jobs:
     modifiedAt: '2023-04-04 04:52:43'
     author: smille29@its.jnj.com
   jobs/DEV_JET_PIPELINE_JOB:
-    name: DEV_JET_PIPELINE_JOB
+    name: JET_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -3358,7 +3358,7 @@ jobs:
     modifiedAt: '2023-04-04 04:58:11'
     author: smille29@its.jnj.com
   jobs/DEV_JNS_PIPELINE_JOB:
-    name: DEV_JNS_PIPELINE_JOB
+    name: JNS_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -3382,7 +3382,7 @@ jobs:
     modifiedAt: '2023-04-04 04:58:16'
     author: smille29@its.jnj.com
   jobs/DEV_JSW_PIPELINE_JOB:
-    name: DEV_JSW_PIPELINE_JOB
+    name: JSW_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -3406,7 +3406,7 @@ jobs:
     modifiedAt: '2023-04-04 04:58:20'
     author: smille29@its.jnj.com
   jobs/DEV_MTR_PIPELINE_JOB:
-    name: DEV_MTR_PIPELINE_JOB
+    name: MTR_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -3430,7 +3430,7 @@ jobs:
     modifiedAt: '2023-04-04 04:58:39'
     author: smille29@its.jnj.com
   jobs/DEV_SJD_PIPELINE_JOB:
-    name: DEV_SJD_PIPELINE_JOB
+    name: SJD_PIPELINE_JOB
     description: ''
     fabricUID: 32
     scheduler:
@@ -3453,94 +3453,6 @@ jobs:
     createdAt: '2023-03-28 17:29:19'
     modifiedAt: '2023-04-04 04:58:59'
     author: smille29@its.jnj.com
-  jobs/JOB_TBL_STRCT_MD:
-    name: JOB_TBL_STRCT_MD
-    description: ''
-    fabricUID: 32
-    scheduler:
-      Databricks: {}
-    cloudProvider: null
-    jobSize: Prophecy_Small
-    scheduleCron: 0 0 0 1/1 * ? *
-    timeout: null
-    alerting:
-      emails: ''
-      onStart: false
-      onSuccess: false
-      onFailure: false
-    pipelines:
-    - pipelines/TBL_STRCT_MES_MD_WORKFLOW
-    - pipelines/TBL_STRCT_MD_DOC
-    - pipelines/TBL_STRCT_MD_BUSINESS_PARTNER
-    - pipelines/TBL_STRCT_MD_HANDLING_UNIT
-    - pipelines/TBL_STRCT_MD_BILLING
-    - pipelines/TBL_STRCT_MD_DELIVERIES
-    - pipelines/TBL_STRCT_MD_PLANT
-    - pipelines/TBL_STRCT_MD_TRACKING_DATA
-    - pipelines/TBL_STRCT_MD_INVENTORY_STOCK
-    - pipelines/TBL_STRCT_MD_PURCHASE_ORDER
-    - pipelines/TBL_STRCT_MD_CURRENCY_ENTERPRISE
-    - pipelines/TBL_STRCT_MES_MD_MATERIAL
-    - pipelines/TBL_STRCT_MD_MATERIAL
-    - pipelines/TBL_STRCT_MD_COUNTRY_ENTERPRISE
-    - pipelines/TBL_STRCT_MD_CUSTOMER
-    - pipelines/TBL_STRCT_MES_MD_GENEOLOGY
-    - pipelines/TBL_STRCT_MD_PARTY_ADDRESS
-    - pipelines/TBL_STRCT_MES_MD_SITE_PLANT
-    - pipelines/TBL_STRCT_MD_BATCH_MASTER
-    - pipelines/TBL_STRCT_MES_MD_BATCH_LOT
-    - pipelines/TBL_STRCT_MES_MD_REASON_CODES
-    - pipelines/TBL_STRCT_MD
-    - pipelines/TBL_STRCT_MD_TRANSFER_ORDER
-    - pipelines/TBL_STRCT_MD_MANUFACTURING
-    - pipelines/TBL_STRCT_MD_WORKCENTER
-    - pipelines/TBL_STRCT_MD_SOURCELIST
-    - pipelines/TBL_STRCT_MD_INSPECTION_LOT
-    - pipelines/TBL_STRCT_MES_MD_RESOURCE
-    - pipelines/TBL_STRCT_MD_SHIPPING
-    - pipelines/TBL_STRCT_MD_ROUTING
-    - pipelines/TBL_STRCT_MD_VENDOR_MASTER
-    - pipelines/TBL_STRCT_MD_RESERVATIONS
-    - pipelines/TBL_STRCT_MD_FACTORY_CALENDAR
-    - pipelines/TBL_STRCT_MD_SALES_DOCUMENT_HIERARCHY
-    - pipelines/TBL_STRCT_MD_PROCESS_ORDER
-    - pipelines/TBL_STRCT_MD_LEGAL_ENTITY
-    - pipelines/TBL_STRCT_MD_BILL_OF_MATERIAL
-    - pipelines/TBL_STRCT_MD_SALES_ORDER
-    - pipelines/TBL_STRCT_MD_EQUIPMENT
-    jobClusterMode:
-      clusterMode:
-        Single: {}
-      clusterId: null
-    enabled: null
-    createdAt: '2023-03-21 18:50:06'
-    modifiedAt: '2023-03-22 17:30:52'
-    author: skostadi@its.jnj.com
-  jobs/L1_MD_BBN:
-    name: L1_MD_BBN
-    description: ''
-    fabricUID: 32
-    scheduler:
-      Databricks: {}
-    cloudProvider: null
-    jobSize: Prophecy_Small
-    scheduleCron: 0 0 0 1/1 * ? *
-    timeout: null
-    alerting:
-      emails: ''
-      onStart: false
-      onSuccess: false
-      onFailure: false
-    pipelines:
-    - pipelines/SK_SAP_01_MD_SER_NUM_STOCK_SGMNT
-    jobClusterMode:
-      clusterMode:
-        Single: {}
-      clusterId: null
-    enabled: null
-    createdAt: '2023-03-22 13:05:15'
-    modifiedAt: '2023-03-22 13:06:35'
-    author: skostadi@its.jnj.com
 functions:
   author: null
   createdAt: '2023-03-24 15:42:34'
