JEKT-268 - Updated Day of week on schedule of Jobs 🔁 Modified     - Job        - BBM_PIPELINE_JOB        - GMD_PIPELINE_JOB        - ANS_PIPELINE_JOB        - BBA_PIPELINE_JOB        - MTK_PIPELINE_JOB

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -505,7 +505,6 @@ pipelines:
       - datasets/MD_MATL_INV
     subgraphs: []
     dependencies: {}
-
   pipelines/SAP_MD_MATL_BOM:
     name: SAP_MD_MATL_BOM
     description: ''
@@ -3780,7 +3779,7 @@ jobs:
       Databricks: {}
     cloudProvider: null
     jobSize: Prophecy_Small
-    scheduleCron: 0 0 2 ? * * *
+    scheduleCron: 0 0 2 ? * 7 *
     timeout: null
     alerting:
       emails: ''
@@ -3795,7 +3794,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:19:30'
-    modifiedAt: '2023-04-04 04:57:12'
+    modifiedAt: '2023-04-10 19:13:49'
     author: smille29@its.jnj.com
   jobs/DEV_BBL_PIPELINE_JOB:
     name: BBL_PIPELINE_JOB
@@ -3994,7 +3993,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:40:15'
-    modifiedAt: '2023-04-04 04:57:03'
+    modifiedAt: '2023-04-10 19:07:33'
     author: smille29@its.jnj.com
   jobs/DEV_BBM_PIPELINE_JOB:
     name: BBM_PIPELINE_JOB
@@ -4004,7 +4003,7 @@ jobs:
       Databricks: {}
     cloudProvider: null
     jobSize: Prophecy_Small
-    scheduleCron: 0 0 0 ? * * *
+    scheduleCron: 0 0 0 ? * 7 *
     timeout: null
     alerting:
       emails: ''
@@ -4018,7 +4017,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 14:41:31'
-    modifiedAt: '2023-04-04 04:57:22'
+    modifiedAt: '2023-04-10 19:14:18'
     author: smille29@its.jnj.com
   jobs/DEV_BWI_PIPELINE_JOB:
     name: BWI_PIPELINE_JOB
@@ -4090,7 +4089,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 15:06:37'
-    modifiedAt: '2023-04-04 04:58:35'
+    modifiedAt: '2023-04-10 19:13:00'
     author: smille29@its.jnj.com
   jobs/DEV_LNX_PIPELINE_JOB:
     name: LNX_PIPELINE_JOB
@@ -4268,7 +4267,7 @@ jobs:
       Databricks: {}
     cloudProvider: null
     jobSize: Prophecy_Small
-    scheduleCron: 0 30 1 ? * * *
+    scheduleCron: 0 30 1 ? * 7 *
     timeout: null
     alerting:
       emails: ''
@@ -4282,7 +4281,7 @@ jobs:
       clusterId: null
     enabled: true
     createdAt: '2023-03-28 17:23:35'
-    modifiedAt: '2023-04-04 04:57:59'
+    modifiedAt: '2023-04-10 19:14:57'
     author: smille29@its.jnj.com
   jobs/DEV_JEM_PIPELINE_JOB:
     name: JEM_PIPELINE_JOB
