JEKT-176 (Added new Config in the Pipeline and added job) 🔁 Modified     - Pipeline        - SAP_MD_MATL_INV_BBA_BBL_BBN_GEU_MRS_MBP     - Job        - JOB_MD_MATL_INV

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -505,7 +505,6 @@ pipelines:
       - datasets/MD_MATL_INV
     subgraphs: []
     dependencies: {}
-
   pipelines/SAP_MD_MATL_BOM:
     name: SAP_MD_MATL_BOM
     description: ''
@@ -546,7 +545,7 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-10 16:01:09'
-    modifiedAt: '2023-04-10 18:32:38'
+    modifiedAt: '2023-04-10 19:42:41'
     datasets:
       inputs:
       - datasets/DS_SAP_01_MARD
@@ -4570,6 +4569,7 @@ jobs:
       onFailure: false
     pipelines:
     - pipelines/JDE_01_MD_MATL_INV
+    - pipelines/SAP_MD_MATL_INV_BBA_BBL_BBN_GEU_MRS_MBP
     - pipelines/SAP_MD_MATL_INV_P01
     jobClusterMode:
       clusterMode:
@@ -4577,7 +4577,7 @@ jobs:
       clusterId: null
     enabled: false
     createdAt: '2023-04-04 14:54:35'
-    modifiedAt: '2023-04-10 13:34:45'
+    modifiedAt: '2023-04-10 19:46:33'
     author: natkins7@its.jnj.com
   jobs/JOB_MD_MATL_BOM:
     name: JOB_MD_MATL_BOM
