❇️ JEKT-305 - JDE Pipeline Creation     - Pipeline        - JDE_01_MD_SHIP_MTK
🔁 Modified
    - Pipeline
       - SAP_01_MD_SHIP_BBN_BBL_P01_HCS
    - Dataset
       - MD_SHIP

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -1218,17 +1218,33 @@ pipelines:
     subgraphs: []
     dependencies: {}
   pipelines/SAP_01_MD_SHIP:
-    name: SAP_01_MD_SHIP
+    name: SAP_01_MD_SHIP_BBN_BBL_P01_HCS
     description: ''
     author: hgermi1@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-04 03:27:53'
-    modifiedAt: '2023-04-07 16:59:31'
+    modifiedAt: '2023-04-10 18:48:10'
     datasets:
       inputs:
       - datasets/DS_SAP_01_VTTK
+      outputs:
+      - datasets/MD_SHIP
+    subgraphs: []
+    dependencies: {}
+  pipelines/JDE_01_MD_SHIP_MTK:
+    name: JDE_01_MD_SHIP_MTK
+    description: ''
+    author: hgermi1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-10 19:20:53'
+    modifiedAt: '2023-04-10 20:01:16'
+    datasets:
+      inputs:
+      - datasets/MD_SHIP
       outputs:
       - datasets/MD_SHIP
     subgraphs: []
@@ -1959,7 +1975,7 @@ datasets:
     description: ''
     author: skostadi@its.jnj.com
     createdAt: '2023-03-20 18:20:04'
-    modifiedAt: '2023-04-07 16:09:01'
+    modifiedAt: '2023-04-10 19:31:37'
     mode: batch
     physicalDatasets:
       CDL_L1_Dev:
