JEKT-246 🔁 Modified     - Pipeline        - JDE_01_F0401_DJD        - JDE_01_F0401_JET_JES     - Dataset        - DS_JDE_01_F0101_adt        - DS_JDE_01_F0401        - DS_JDE_01_F0101
❇️ New
    - Pipeline
       - JDE_01_F0401_MTR

--- a/src/datasets/DS_JDE_01_F0101/pbt_aspects.yml
+++ b/src/datasets/DS_JDE_01_F0101/pbt_aspects.yml
@@ -9,13 +9,6 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: _deleted_
-    type: string
-    nullable: true
-    metadata:
-      description: ''
-      mappings: []
-      tags: []
   - name: ABALKY
     type: string
     nullable: true
@@ -541,42 +534,133 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: ABCFRGUID
+  - name: ABPRGF
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABCFRMKEY
+  - name: ABSCCLTP
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABCFRPID
+  - name: ABTICKER
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABCFRUSER
+  - name: ABEXCHG
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABISDELETE
+  - name: ABDUNS
     type: string
     nullable: true
     metadata:
       description: ''
       mappings: []
       tags: []
-  - name: ABCFRSEQN
+  - name: ABCLASS01
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ABCLASS02
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ABCLASS03
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ABCLASS04
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ABCLASS05
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ABNOE
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ABGROWTHR
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ABYEARSTAR
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ABAEMPGP
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ABACTIN
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ABREVRNG
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ABSYNCS
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ABPERRS
+    type: string
+    nullable: true
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
+  - name: ABCAAD
     type: string
     nullable: true
     metadata:
@@ -618,7 +702,7 @@ schema:
       description: ''
       mappings: []
       tags: []
-  - name: _infa_bigint_sequence_
+  - name: _deleted_
     type: string
     nullable: true
     metadata:
