JEKT-236 (Added Pipeline Description) 🔁 Modified     - Pipeline        - SAP_MD_MATL_INV_HM2

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -388,13 +388,13 @@ pipelines:
     dependencies: {}
   pipelines/SAP_01_MD_MATL_INV:
     name: SAP_MD_MATL_INV_HM2
-    description: ''
+    description: SAP Systems for MD_MATL_INV 3 Tables HM2
     author: ypatel8@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-03-22 13:21:05'
-    modifiedAt: '2023-04-07 17:12:19'
+    modifiedAt: '2023-04-10 20:46:52'
     datasets:
       inputs:
       - datasets/DS_SAP_01_MARA
