--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -388,13 +388,13 @@ pipelines:
     dependencies: {}
   pipelines/SAP_01_MD_MATL_INV:
     name: SAP_MD_MATL_INV_HM2
-    description: ''
+    description: SAP System for MD_MATL_INV 3 Tables HM2
     author: ypatel8@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-03-22 13:21:05'
-    modifiedAt: '2023-04-07 17:12:19'
+    modifiedAt: '2023-04-10 20:43:36'
     datasets:
       inputs:
       - datasets/DS_SAP_01_MARA
@@ -485,13 +485,13 @@ pipelines:
     dependencies: {}
   pipelines/SAP_MD_MATL_INV_P01:
     name: SAP_MD_MATL_INV_P01
-    description: ''
+    description: 'SAP System for MD_MATL_INV 6 Tables '
     author: ypatel8@its.jnj.com
     mode: batch
     artefactID: ''
     language: python
     createdAt: '2023-04-05 13:20:43'
-    modifiedAt: '2023-04-10 20:12:29'
+    modifiedAt: '2023-04-10 20:43:07'
     datasets:
       inputs:
       - datasets/DS_SAP_01_MARD
