--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -558,6 +558,27 @@ pipelines:
       - datasets/MD_MATL_INV
     subgraphs: []
     dependencies: {}
+  pipelines/SAP_MD_MATL_INV_MBP:
+    name: SAP_MD_MATL_INV_MBP
+    description: 'SAP Systems for MD_MATL_INV 5 Tables '
+    author: ypatel8@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-10 21:21:38'
+    modifiedAt: '2023-04-10 21:33:11'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_01_MARD
+      - datasets/DS_SAP_02_MCHB
+      - datasets/DS_SAP_03_MSKU
+      - datasets/DS_SAP_05_MSLB
+      - datasets/DS_SAP_06_MSSL
+      - datasets/DS_SAP_07_MARA
+      outputs:
+      - datasets/MD_MATL_INV
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
@@ -4570,13 +4591,15 @@ jobs:
     pipelines:
     - pipelines/JDE_01_MD_MATL_INV
     - pipelines/SAP_MD_MATL_INV_P01
+    - pipelines/SAP_MD_MATL_INV_MBP
+    - pipelines/SAP_MD_MATL_INV_BBA_BBL_BBN_GEU_MRS_MBP
     jobClusterMode:
       clusterMode:
         Single: {}
       clusterId: null
     enabled: false
     createdAt: '2023-04-04 14:54:35'
-    modifiedAt: '2023-04-10 19:22:05'
+    modifiedAt: '2023-04-10 21:38:40'
     author: natkins7@its.jnj.com
   jobs/JOB_MD_MATL_BOM:
     name: JOB_MD_MATL_BOM
