--- a/src/datasets/MD_MATL_ALT_UOM/pbt_aspects.yml
+++ b/src/datasets/MD_MATL_ALT_UOM/pbt_aspects.yml
@@ -177,3 +177,10 @@ schema:
       description: ''
       mappings: []
       tags: []
+  - name: _deleted_
+    type: string
+    nullable: false
+    metadata:
+      description: ''
+      mappings: []
+      tags: []
