--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -579,6 +579,20 @@ pipelines:
       - datasets/MD_MATL_INV
     subgraphs: []
     dependencies: {}
+  pipelines/JDE_MD_DELV_LINE_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES:
+    name: JDE_MD_DELV_LINE_BW2_GMD_JET_JSW_DEU_MTR_SJD_DJD_JEM_JES
+    description: ''
+    author: jcovezd1@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-11 14:37:19'
+    modifiedAt: '2023-04-11 14:37:33'
+    datasets:
+      inputs: []
+      outputs: []
+    subgraphs: []
+    dependencies: {}
 datasets:
   datasets/MD_HU_SER:
     name: MD_HU_SER
