JEKT-246 ❇️ New     - Dataset        - DS_SAP_01_LFM1     - Pipeline        - SAP_01_LFM1_MBP
🔁 Modified
    - Pipeline
       - JDE_01_F0401_MTR

--- a/src/pbt_project.yml
+++ b/src/pbt_project.yml
@@ -71,11 +71,27 @@ pipelines:
     artefactID: ''
     language: python
     createdAt: '2023-04-10 17:17:58'
-    modifiedAt: '2023-04-10 17:42:55'
+    modifiedAt: '2023-04-10 20:34:35'
     datasets:
       inputs:
       - datasets/DS_JDE_01_F0101
       - datasets/DS_JDE_01_F0401
+      outputs:
+      - datasets/MD_SUP_PRCHSNG_ORG
+    subgraphs: []
+    dependencies: {}
+  pipelines/JDE_01_LFM1_MBP:
+    name: SAP_01_LFM1_MBP
+    description: ''
+    author: lsorarra@its.jnj.com
+    mode: batch
+    artefactID: ''
+    language: python
+    createdAt: '2023-04-11 13:45:12'
+    modifiedAt: '2023-04-11 15:04:39'
+    datasets:
+      inputs:
+      - datasets/DS_SAP_01-LFM1
       outputs:
       - datasets/MD_SUP_PRCHSNG_ORG
     subgraphs: []
@@ -156,6 +172,21 @@ datasets:
         author: lsorarra@its.jnj.com
         createdAt: '2023-04-07 17:26:54'
         modifiedAt: '2023-04-07 17:26:54'
+  datasets/DS_SAP_01-LFM1:
+    name: DS_SAP_01_LFM1
+    description: ''
+    author: lsorarra@its.jnj.com
+    createdAt: '2023-04-11 13:51:28'
+    modifiedAt: '2023-04-11 13:59:50'
+    mode: batch
+    physicalDatasets:
+      CDL_L1_Dev:
+        fabricId: 32
+        datasetType: Database
+        description: ''
+        author: lsorarra@its.jnj.com
+        createdAt: '2023-04-11 13:51:28'
+        modifiedAt: '2023-04-11 13:51:28'
 templates: {}
 jobs: {}
 functions:
